<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sparklepurple"
    tools:context="com.example.skstockm.generationapp.InputMainActivity">

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Name: "
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name_hint"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/firstNameLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.764"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last Name:"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/firstNameLabel"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name_hint"
        app:layout_constraintRight_toRightOf="@+id/firstName"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <TextView
        android:id="@+id/gradYearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Graduation Year:"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel"
        app:layout_constraintLeft_toLeftOf="@+id/lastNameLabel" />

    <Spinner
        android:id="@+id/gradYearSpinner"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:entries="@array/grad_year"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintLeft_toRightOf="@+id/gradYearLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.413"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <RadioGroup
        android:layout_width="81dp"
        android:layout_height="66dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/degreeLevelLabel"
        android:id="@+id/radioGroup"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/radioButtonBA"
            android:layout_width="79dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:scaleX="0.85"
            android:scaleY="0.75"
            android:text="@string/rb_BA"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="154dp" />

        <RadioButton
            android:id="@+id/radioButtonMS"
            android:layout_width="79dp"
            android:layout_height="22dp"
            android:scaleX="0.85"
            android:scaleY="0.75"
            android:text="@string/rb_MS" />

        <RadioButton
            android:id="@+id/radioButtonBS"
            android:layout_width="79dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:checked="true"
            android:scaleX="0.85"
            android:scaleY="0.75"
            android:text="@string/rb_BS"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="154dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/degreeLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Degree Level:"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gradYearSpinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/major_hint"
        app:layout_constraintRight_toRightOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.887" />

    <TextView
        android:id="@+id/majorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp"
        android:text="Major:"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/gradYearLabel"
        app:layout_constraintTop_toBottomOf="@+id/gradYearLabel" />

    <EditText
        android:id="@+id/favoriteActivities"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:layout_width="215dp"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="@string/favAct_hint"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/school"
        app:layout_constraintRight_toRightOf="@+id/school"
        app:layout_constraintHorizontal_bias="0.937" />

    <TextView
        android:id="@+id/favActivitiesLabel"
        android:layout_width="64dp"
        android:layout_height="33dp"
        android:text="Favorite Activities:"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/schoolLabel"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/schoolLabel"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:onClick="onSendMessage"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/favoriteActivities"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/schoolLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="School:"
        android:textStyle="bold"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/majorLabel"
        app:layout_constraintLeft_toLeftOf="@+id/majorLabel"
        app:layout_constraintHorizontal_bias="0.111" />

    <EditText
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/school_hint"
        app:layout_constraintRight_toRightOf="@+id/major"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/major" />

</android.support.constraint.ConstraintLayout>
